# openbroker

./: .gitignore  LICENSE  README.md  api_reference.html  genindex.html  index.html  objects.inv  pyproject.toml  searchindex.js  tutorial.html
_sources/: changelog.rst.txt  index.rst.txt  tutorial.rst.txt
docs/: .buildinfo  api_reference.html  api_reference.rst  changelog.html  conf.py  index.html  index.rst  search.html  searchindex.js
examples/: broker_login.py  list_brokers.py  place_limit_order.py  sample_credentials.ini  search_contract.py  straddle_strategy.py
openbroker/: __init__.py  broker.py  broker_login.py  client.py  config.py  exceptions.py  instrument.py  order.py  session.py  utils.py
openbroker/api/: __init__.py  base.py  instruments.py  orders.py  user.py  ws.py
openbroker/constant/: __init__.py  broker.py  instrument.py  order.py
openbroker/datatype/: __init__.py  instrument.py  order.py
openbroker/entity/: __init__.py  broker.py  order.py
